code/human_written_tests/WebAssembly/processed_control_flow_validation/test_unreachable_67.wast
(assert_invalid
  (module (func $type-func-value-num-vs-void-after-infinite-loop
    (loop (br 0)) (i32.const 1)
  ))
  "type mismatch"
)